updated code to be more efficient

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <meta name="theme-color" content="#000000" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/1/13/Android_P_logo.svg">
   
     <title>Ponder</title>
   </head>
